--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,15 +27,15 @@
 <div class="container">
 <p>Your userid contains your name and badge number.  We will use this information for a citation search. Please confirm information for agency and county for citation search and user profile:</p>
 
-<form *ngIf="countyForm" [formGroup]="countyForm" class="normal-form" (ngSubmit)="countyDetails()">
-<mat-radio-group aria-label="Select an option"
+<form *ngIf="countyForm" #EditItemForm="ngForm" [formGroup]="countyForm" class="normal-form" (ngSubmit)="countyDetails()">
+<mat-radio-group required [ngModel]="selectedRadio" aria-label="Select an option"
 formControlName="county"
 >
   <mat-radio-button *ngFor = "let c of this.county.countyname" [value] = "c">{{c}}</mat-radio-button>
 </mat-radio-group>
 <br><br>
 <div align="center">
-<button mat-raised-button>Confirm</button>
+<button mat-raised-button [disabled]="!EditItemForm">Confirm</button>
 </div>
 </form>
 </div>
@@ -48,32 +48,33 @@ formControlName="county"
   <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- Citation Column -->
+    
     <ng-container matColumnDef="citation">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Citation # </th>
-      <td mat-cell *matCellDef="let row">  </td>
+      <td mat-cell *matCellDef="let row"> {{row.citation}} </td>
     </ng-container>
 
     <!-- Full Name Column -->
     <ng-container matColumnDef="fullName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Name </th>
-      <td mat-cell *matCellDef="let row"> </td>
+      <td mat-cell *matCellDef="let row"> {{row.FullName}}</td>
     </ng-container>
 
     <!-- County Column -->
     <ng-container matColumnDef="county">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> County </th>
-      <td mat-cell *matCellDef="let row">  </td>
+      <td mat-cell *matCellDef="let row">{{row.County}}  </td>
     </ng-container>
 
     <!-- Violation Date Column -->
     <ng-container matColumnDef="violationDate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Violation Date </th>
-      <td mat-cell *matCellDef="let row" >  </td>
+      <td mat-cell *matCellDef="let row" > {{row.ViolationDate}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dueDate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Due Date </th>
-      <td mat-cell *matCellDef="let row">  </td>
+      <td mat-cell *matCellDef="let row"> {{row.DueDate}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -84,10 +85,10 @@ formControlName="county"
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
 </div>
+<br><br><br><br><br><br><br>
 
   <!-- New Code Ends-->
-
-</body>
-<footer class="page-footer">
+  <footer class="page-footer">
     <p style="text-align: center; color: white; font-weight: 600;">&copy; 2020 Judicial Council of California</p>
 </footer>
+</body>
