--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,27 +12,43 @@
     <div class="col-md-9">
   <p style="font-size: 30px;color: #2A3C50;" >Your Citations</p>
 </div>
-<div class="col-md-1" style="text-align: end;">
+<div class="col-md-3 widgets_div">
+  <div class="icon_div">
   <span class="material-icons">
     person
   </span>
-  </div>
-  <div class="col-md-2">
+</div>
+    <div class="text_div">
+  <span>
   {{this.officer.OfficerName}}<br>
   {{this.officer.Badge}}<br>
   {{this.officer.OfficerID}}<br>
+</span>
+</div>
 </div>
   </div>  
 <br>
 <div class="container">
 <p>Your userid contains your name and badge number.  We will use this information for a citation search. Please confirm information for agency and county for citation search and user profile:</p>
 
+<form *ngIf="agencyForm" #EditItemForm="ngForm" [formGroup]="agencyForm" class="normal-form" (ngSubmit)="agencyDetails()">
+<mat-checkbox formControlName="agency" (change)="agency($event,this.officer.AgencyName)">
+  {{this.officer.AgencyName}}
+</mat-checkbox>
+</form>
+<br>
 <form *ngIf="countyForm" #EditItemForm="ngForm" [formGroup]="countyForm" class="normal-form" (ngSubmit)="countyDetails()">
-<mat-radio-group required [ngModel]="selectedRadio" aria-label="Select an option"
+
+  <div *ngFor="let c of this.county.countyname" style="display: inline; padding-left: 5px;">
+    <mat-checkbox formControlName="county"  (change)="toggle($event,c)">
+      {{c}}
+    </mat-checkbox>
+    </div>
+<!-- <mat-radio-group required [ngModel]="selectedRadio" aria-label="Select an option"
 formControlName="county"
 >
   <mat-radio-button *ngFor = "let c of this.county.countyname" [value] = "c">{{c}}</mat-radio-button>
-</mat-radio-group>
+</mat-radio-group> -->
 <br><br>
 <div align="center">
 <button mat-raised-button [disabled]="!EditItemForm">Confirm</button>
@@ -55,34 +71,34 @@ formControlName="county"
     </ng-container>
 
     <!-- Full Name Column -->
-    <ng-container matColumnDef="fullName">
+    <ng-container matColumnDef="FullName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Name </th>
       <td mat-cell *matCellDef="let row"> {{row.FullName}}</td>
     </ng-container>
 
     <!-- County Column -->
-    <ng-container matColumnDef="county">
+    <ng-container matColumnDef="County">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> County </th>
       <td mat-cell *matCellDef="let row">{{row.County}}  </td>
     </ng-container>
 
     <!-- Violation Date Column -->
-    <ng-container matColumnDef="violationDate">
+    <ng-container matColumnDef="ViolationDate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Violation Date </th>
       <td mat-cell *matCellDef="let row" > {{row.ViolationDate}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="dueDate">
+    <ng-container matColumnDef="DueDate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Due Date </th>
       <td mat-cell *matCellDef="let row"> {{row.DueDate}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="onRowClicked(row)"></tr>
 
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[3, 10, 25, 100]"></mat-paginator>
 </div>
 </div>
 <br><br><br><br><br><br><br>
