--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,3 @@
-
-
 body{
   background-color: #f2f3f4 !important;
   /* position: relative; */
@@ -14,12 +12,78 @@ body{
     overflow: auto !important;
     height: 125% !important;
   }
+  .container{
+    margin: 0px 10px !important;
+  }
+  .citations{
+    font-size: 10px !important;
+  }
 }
 
 @media only screen and (max-width: 768px) {
   body{
     width: auto !important;
   }
+
+  .imghead{
+    width: 200px !important;
+    height: 40px;
+  }
+
+  .mat-cell{
+    font-size: 10px !important;
+  }
+  .col-md-9{
+    max-width:50% !important;
+    padding: 0px !important;
+  }
+  .col-md-3{
+    max-width:40% !important;
+    padding: 0px !important;
+
+    /* padding-bottom: 20px !important; */
+    /* margin-bottom: 20px !important; */
+  }
+  /* .widgets_div {
+    text-align: initial !important;
+  } */
+  .container{
+    margin: 0px 5px !important;
+  }
+  .citations{
+    font-size: 10px !important;
+    font-weight: bold !important;
+  }
+
+  .widgets_div .icon_div {
+    display: inline-block;
+    margin-left: 5px !important;
+    vertical-align:middle;
+  }
+  
+  .widgets_div .text_div {
+    display: inline-block;
+    /* margin-left: 2px !important; */
+    vertical-align: middle;
+  }
+  .officetext{
+    font-size:10px !important;
+  }
+  .material-icons{
+    font-size: 15px !important;
+    padding-top: 15px !important;
+  }
+  .ptext{
+    font-size: 12px !important;
+  }
+  .tablewidth{
+    max-width: 500px !important;
+  }
+}
+
+.citations{
+  font-size: 30px;
+  color: #2A3C50;
 }
 
 .footer{
@@ -61,9 +125,9 @@ border: 2px solid white;
 }
 
 .material-icons{
-  font-size: 36px !important;
-  padding-top: 15px;
-  /* margin-right: 20%; */
+  font-size: 26px;
+  padding-top: 8px;
+  padding-right: 5px;
 }
 .mat-radio-button ~ .mat-radio-button {
   margin-left: 16px;
@@ -94,16 +158,39 @@ td, th {
 }
 
 .widgets_div .icon_div {
-  display: inline-block;
+  /* display: inline-block; */
   margin-left: 15px;
   vertical-align:middle;
+  float: left;
 }
 
 .widgets_div .text_div {
-  display: inline-block;
+  /* display: inline-block; */
   margin-left: 10px;
   vertical-align: middle;
+  float: left;
 }
+.icon_div {
+  float: left;
+  color: white !important;
+}
+.imghead{
+  width: 242px;
+  height: 40px;
+}
+ 
+
+.text_div {
+  float: left;
+  color: white !important;
+}
+.highlight{
+  background: orange; 
+}
+
+.mat-checkbox ::ng-deep .mat-checkbox-frame {
+    border-color: blue !important;
+  }
 
 /* New Code End */
 
