--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,27 @@
+
+
 <nav class="navbar" style="background-color: #2a3c50; padding: 0.75rem 1rem 0.75rem; background-size: contain;">
-    <img src="./assets/logo.png" alt="California Courts" style="width: 242px; height: 40px;" />
+  <div class="navbar-header">
+    <img src="./assets/logo.png" alt="California Courts" class="imghead" />
+  </div>
+
+    <ul class="nav navbar-nav ml-auto">
+      <div class="parent">
+        <div class="icon_div">
+        <span class="material-icons">
+          person
+        </span>
+      </div>
+          <div class="icon_div">
+        <span class="officetext">
+        {{this.officer.OfficerName}}<br>
+        <!-- {{this.officer.Badge}}<br> -->
+        {{this.officer.OfficerID}}<br>
+      </span>
+      </div>
+    </div>
+    </ul>
+   
 </nav>
 
 <body>
@@ -10,7 +32,7 @@
   <br>
   <div class="row container">
     <div class="col-md-9">
-  <p style="font-size: 30px;color: #2A3C50;" >Your Citations</p>
+  <p class="citations" >Your Citations</p>
 </div>
 <div class="col-md-3 widgets_div">
   <div class="icon_div">
@@ -19,7 +41,7 @@
   </span>
 </div>
     <div class="text_div">
-  <span>
+  <span class="officetext">
   {{this.officer.OfficerName}}<br>
   {{this.officer.Badge}}<br>
   {{this.officer.OfficerID}}<br>
@@ -29,20 +51,29 @@
   </div>  
 <br>
 <div class="container">
-<p>Your userid contains your name and badge number.  We will use this information for a citation search. Please confirm information for agency and county for citation search and user profile:</p>
+<p class="ptext">Your userid contains your name and badge number.  We will use this information for a citation search. Please confirm information for agency and county for citation search and user profile:</p>
 
 <form *ngIf="agencyForm" #EditItemForm="ngForm" [formGroup]="agencyForm" class="normal-form" (ngSubmit)="agencyDetails()">
-<mat-checkbox formControlName="agency" (change)="agency($event,this.officer.AgencyName)">
+<mat-checkbox formControlName="agency" (change)="agency($event,this.officer.AgencyName)" (change)="onChangeCheck($event, this)" #check>
   {{this.officer.AgencyName}}
 </mat-checkbox>
+
+<mat-error align="end" *ngIf="!check.checked">Please check</mat-error>
 </form>
 <br>
-<form *ngIf="countyForm" #EditItemForm="ngForm" [formGroup]="countyForm" class="normal-form" (ngSubmit)="countyDetails()">
+
+
+<form *ngIf="countyForm" #EditItemForm="ngForm" [formGroup]="countyForm" class="normal-form" (ngSubmit)="countyDetails(countyForm.value)">
 
   <div *ngFor="let c of this.fetchcounty" style="display: inline; padding-left: 5px;">
-    <mat-checkbox formControlName="county"  (change)="toggle($event,c)">
-      {{c}}
+    <mat-checkbox formControlName="county"  >
+      Hello
     </mat-checkbox>
+    <div *ngIf="showMsg1">
+   
+      <p style="color: red;">Please Select the checkbox to Submit</p> 
+
+  </div>
     </div>
 <!-- <mat-radio-group required [ngModel]="selectedRadio" aria-label="Select an option"
 formControlName="county"
@@ -51,23 +82,74 @@ formControlName="county"
 </mat-radio-group> -->
 <br><br>
 <div align="center">
-<button mat-raised-button [disabled]="!EditItemForm">Confirm</button>
+  <div *ngIf="showMsg">
+  <p class="alert alert-success">
+    <strong>You have Successfully Submitted!</strong> 
+</p>
+</div>
+<!-- <button mat-raised-button [disabled]="EditItemForm.form.valid">Confirm</button> -->
+<button mat-raised-button >Confirm</button>
+
 </div>
 </form>
 </div>
 
 <br>
 
-<div class="container">
+<!-- <div class="container">
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Citation #</th>
+        <th scope="col">Full Name</th>
+        <th scope="col">County</th>
+        <th scope="col">Violation Date</th>
+        <th scope="col">Due Date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">{{this.citation.citation}}</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+</div> -->
+
+<div class="container tablewidth">
 
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
+
+  <table mat-table [dataSource]="dataSource" class="table" matSort>
+
+    <ng-container matColumnDef="checkbox">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox></mat-checkbox>
+      </td>
+
+    </ng-container>
 
     <!-- Citation Column -->
     
     <ng-container matColumnDef="citation">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Citation # </th>
-      <td mat-cell *matCellDef="let row"> {{row.citation}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.citation}}</td>
+      <!-- <td mat-cell *matCellDef="value">value</td> -->
     </ng-container>
 
     <!-- Full Name Column -->
@@ -94,7 +176,7 @@ formControlName="county"
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="onRowClicked(row)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns" [ngClass]="{'highlight': selectedRowIndex == row.id}" (click)="onRowClicked(row)"></tr>
 
   </table>
 
